--- a/Cpp2XamarinTestApp/Cpp2XamarinTestApp.Android/Cpp2XamarinTestApp.Android.csproj
+++ b/Cpp2XamarinTestApp/Cpp2XamarinTestApp.Android/Cpp2XamarinTestApp.Android.csproj
@@ -40,7 +40,7 @@
     <EnableLLVM>false</EnableLLVM>
     <AndroidEnableProfiledAot>false</AndroidEnableProfiledAot>
     <BundleAssemblies>false</BundleAssemblies>
-    <Debugger>Xamarin</Debugger>
+    <Debugger>Native</Debugger>
     <AndroidCreatePackagePerAbi>false</AndroidCreatePackagePerAbi>
     <MandroidI18n />
   </PropertyGroup>
